# video-player-jslib_study_front

./: README.md  fakegoogle.html  index.html  pyproject.toml
font-awesome-4.7.0/css/: font-awesome.min.css  style.css
